infra/k8s/posts-srv.yml
apiVersion: v1 
kind: Service 
metadata:
  name: posts-nodeport-srv 
spec:
  type: NodePort 
  selector: 
    app: posts 
  ports: 
    - name: posts 
      protocol: TCP 
      port: 3000 
      targetPort: 3000
